--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "taxi-company",
   "version": "0.0.1",
-  "description": "Taxi compnay website with staff dashboard",
+  "description": "Taxi company website with staff dashboard",
   "main": "server.js",
   "scripts": {
-    "client": "npm start",
-    "server": "node server/server:website"
+    "start": "node server/server.js",
+    "client": "npm start --prefix client",
+    "server": "nodemon server/server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,16 @@
   "bugs": {
     "url": "https://github.com/justbenuk/taxi-company/issues"
   },
-  "homepage": "https://github.com/justbenuk/taxi-company#readme"
+  "homepage": "https://github.com/justbenuk/taxi-company#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
+    "concurrently": "^7.4.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20"
+  }
 }
