--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-toastify": "^9.0.8"
   }
 }
